Bug 73628 - MSG: Running Out of ionotify Watches Causes Inaccurate Error Message
Summary: MSG: Running Out of ionotify Watches Causes Inaccurate Error Message
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-14 20:12 UTC by Jameson Pugh
Modified: 2014-07-17 02:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jameson Pugh 2014-01-14 20:12:40 UTC
Running out of ionotify watches will result in a "No space left on device" error when stopping or starting a service. The relevant function is service_watch_pid_file here: http://cgit.freedesktop.org/systemd/systemd/tree/src/core/service.c#n2783.
Comment 1 Zbigniew Jedrzejewski-Szmek 2014-07-17 02:53:29 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=18abe7bd3e.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.